# cninjatodola

./: .gitignore  .gitlab-ci.yml  Application.cpp  Application.hpp  CMakeLists.txt  CninjaTODOla.pro  Dockerfile  LICENSE  NinjaTODOla.cpp  NinjaTODOla.h  NinjaTODOla.hpp  README.md  cninja  command.cpp  command.hpp  externRepresentation.cpp  externRepresentation.hpp  file.hpp  keyboardInput.cpp  main.cpp  ninjatodolalist.cpp  ninjatodolalist.h  ninjatodolalist.hpp  ninjatodolaobject.cpp  ninjatodolaobject.h  ninjatodolaobject.hpp  tasklist.cpp  tasklist.h  tasklist.hpp  test_zone.cpp  test_zone.h  variousfunctions.cpp  variousfunctions.h  variousfunctions.hpp
containerizationDF/: Dockerfile
lintDF/: Dockerfile
src/: Directory.cpp  Directory.hpp  command.cpp  command.hpp  externRepresentation.hpp  file.cpp  keyboardInput.hpp  ninjatodolalist.hpp  ninjatodolaobject.cpp  ninjatodolaobject.hpp  test_zone.cpp  variousfunctions.cpp  variousfunctions.hpp
