cmake_minimum_required(VERSION 3.10)

# set the project name
project(cninjatodola)

# add the executable
add_executable(cninjatodola Application.cpp command.cpp Directory.cpp externRepresentation.cpp file.cpp keyboardInput.cpp main.cpp NinjaTODOla.cpp ninjatodolalist.cpp ninjatodolaobject.cpp tasklist.cpp test_zone.cpp variousfunctions.cpp) 
